@@ -1,2 +1,3 @@
-2014-01-03 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+2014-01-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * disable coveralls for ruby < 1.9
   * initial commit
